Fixes gigantic logo on small screens

--- a/wp-content/themes/vaughan-capital/assets/styles/partials/_layout.scss
+++ b/wp-content/themes/vaughan-capital/assets/styles/partials/_layout.scss
@@ -57,7 +57,7 @@
 
 .slacknav-brand {
     float: left;
-    width: 40%;
+    width: 180px;
 
     img {
         width: 100%;
@@ -182,7 +182,7 @@ article.page {
     
     > img {
         position: relative;
-        width: 100%;
+        max-width: 75%;
         bottom: 15%;
     }
 }
